--- a/index.html
+++ b/index.html
@@ -9,6 +9,27 @@
         <script src="js/jquery-3.5.1.js"></script>
     </head>
     <body>
+        <div class="welcome"> 
+            <h2>Welcome to Pizza Kenya!</h2>
+        </div>
+        <div class="container-fluid section" id="about">
+            <div class="col-md-12">
+              <div class="col-md-7 img text-center about-img">
+                  <div class="about-image">
+                    <img src="assets/shop.jpg" alt="Our Shop">
+                  </div>
+              </div>
+              <div class="col-md-5 align-items-center">
+                <div class="content">
+                  <h3>About Pizza Kenya</h3>
+                  <p>Pizza Kenya started as a small, family-owned pizzeria in Nairobi, Kneya, in 1995. Since then, we have grown 
+                  to over 10 branches. We believe our pizzas are the best in Kenya, which is why we have introduced this website, to make 
+                  sure everyone has the oppoertunity to try our pizzas, wherever you are. Simply scroll down and place your order with 
+                  us, and we'll deliver it wehrever you are.</p>
+                </div>
+              </div>
+            </div>
+        </div>
         
     </body>
 </html>
