Optimise about us section

--- a/index.html
+++ b/index.html
@@ -13,23 +13,39 @@
             <h2>Welcome to Pizza Kenya!</h2>
         </div>
         <div class="container-fluid section" id="about">
-            <div class="col-md-12">
-              <div class="col-md-7 img text-center about-img">
-                  <div class="about-image">
-                    <img src="assets/shop.jpg" alt="Our Shop">
-                  </div>
-              </div>
-              <div class="col-md-5 align-items-center">
-                <div class="content">
-                  <h3>About Pizza Kenya</h3>
-                  <p>Pizza Kenya started as a small, family-owned pizzeria in Nairobi, Kneya, in 1995. Since then, we have grown 
-                  to over 10 branches. We believe our pizzas are the best in Kenya, which is why we have introduced this website, to make 
-                  sure everyone has the oppoertunity to try our pizzas, wherever you are. Simply scroll down and place your order with 
-                  us, and we'll deliver it wehrever you are.</p>
+            <div class= row>
+                <div class= "col-md-8">
+                    <div class="col-md-4">
+                        <div class="about-image">
+                            <img src="assets/shop.jpg" alt="Our Shop" id="about">
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="content">
+                        <h3>About Pizza Kenya</h3>
+                        <p>Pizza Kenya started as a small, family-owned pizzeria in Nairobi, Kneya, in 1995. Since then, we have grown 
+                        to over 10 branches. We believe our pizzas are the best in Kenya, which is why we have introduced this website, to make 
+                        sure everyone has the oppoertunity to try our pizzas, wherever you are. Simply scroll down and place your order with 
+                        us, and we'll deliver it wehrever you are.</p>
+                        </div>
+                    </div>
                 </div>
-              </div>
+                <div class= "col-md-4">
+                    <h3>Our Pizzas</h3>
+                    <div id=>
+                        <img src="assets/chicken.img" alt= "">
+                    </div>
+                    <div>
+                        <img src="" alt="">
+                    </div>
+                    <div>
+
+                    </div>
+                </div>
             </div>
         </div>
-        
+        <div>
+
+        </div>
     </body>
 </html>
