Add pizza images

--- a/index.html
+++ b/index.html
@@ -32,14 +32,15 @@
                 </div>
                 <div class= "col-md-4">
                     <h3>Our Pizzas</h3>
-                    <div id=>
-                        <img src="assets/chicken.img" alt= "">
+                    <div class= "Chicken">
+                        <img src="assets/chicken.jpg" alt= "Chicken Pizza">
+                        
                     </div>
-                    <div>
-                        <img src="" alt="">
+                    <div class="Margherita">
+                        <img src="assets/margherita.jpg" alt="Margherita Pizza">
                     </div>
-                    <div>
-
+                    <div class="Hawaiian">
+                        <img src="assets/hawaiian.jpg" alt="Hawaiian Pizza">
                     </div>
                 </div>
             </div>
