Add pizza descriptions

--- a/index.html
+++ b/index.html
@@ -34,13 +34,18 @@
                     <h3>Our Pizzas</h3>
                     <div class= "Chicken">
                         <img src="assets/chicken.jpg" alt= "Chicken Pizza">
-                        
+                        <h4>Chicken Pizza</h4>
+                        <p>Made with the finest, locally sourced chicken</p>
                     </div>
                     <div class="Margherita">
                         <img src="assets/margherita.jpg" alt="Margherita Pizza">
+                        <h4>Margherita Pizza</h4>
+                        <p>Tasty tomatoes for our vegetarian guests</p>
                     </div>
                     <div class="Hawaiian">
                         <img src="assets/hawaiian.jpg" alt="Hawaiian Pizza">
+                        <h4>Hawaiian Pizza</h4>
+                        <p>Controversial pineapple and ham, love it or hate it!</p>
                     </div>
                 </div>
             </div>
