Amend order of js and jquery

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <title>Pizza Kenya</title>
         <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
         <link rel="stylesheet" href="css/styles.css" type= "text/css">
-        <script src="js/scripts.js"></script>
         <script src="js/jquery-3.5.1.js"></script>
+        <script src="js/scripts.js"></script>  
     </head>
     <body>
         <div class="welcome"> 
@@ -110,7 +110,7 @@
                         <p>Please consider giving a tip to your delivery person upon arrival.</p>
                         <p><strong>N.B.: Orders may only be paid for in cash on delivery!</strong></p>
                     </div>
-                    <div class= "tabulation">
+                    <div class= "t">
                         <h4>Your Order is:</h3>
                         <div id="your-orders">
                             <table class="table table-sm  totaltable">
