Debug new order table

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                             <option value="large">Large -- 1400 KES</option>
                         </select>
                         <label for="select">Select Your Pizza</label>
-                        <select class="browser-default custom-select custom-select-md mb-3" class="name">
+                        <select class="browser-default custom-select custom-select-md mb-3" id="name">
                             <option selected value="0">Select pizza here</option>
                             <option value="Chicken Pizza">Chicken Pizza</option>
                             <option value="Margherita Pizza">Margherita Pizza</option>
@@ -148,7 +148,7 @@
                 <form action="">
                     <div class="form-group">
                         <input type="text" id="location" class="form-control mb-3" placeholder="Delivery location: please provide a detailed description.">
-                        <input type="text" id="name" class="form-control mb-3" placeholder="Name">
+                        <input type="text" id="names" class="form-control mb-3" placeholder="Name">
                         <input type="number" id="phone" class="form-control mb-3" placeholder="Pnone Number">
                         <button class="btn btn-success" id="final-order">Place Order</button>
                     </div>
