Debug order total

--- a/index.html
+++ b/index.html
@@ -59,26 +59,26 @@
             <div class="row">
                 <div class="col-md-6">
                     <form action="">
-                        <label for="select">Select the size of your pizza</label>
+                        <label for= "Size">Select the size of your pizza</label>
                         <select class="browser-default custom-select custom-select-md mb-3" id="size">
                             <option selected value="0">Select size here</option>
-                            <option value="small">Small -- 700 KES</option>
-                            <option value="medium">Medium -- 1000 KES</option>
-                            <option value="large">Large -- 1400 KES</option>
+                            <option value="Small">Small -- 700 KES</option>
+                            <option value="Medium">Medium -- 1000 KES</option>
+                            <option value="Large">Large -- 1400 KES</option>
                         </select>
-                        <label for="select">Select Your Pizza</label>
+                        <label for= "Select">Select Your Pizza</label>
                         <select class="browser-default custom-select custom-select-md mb-3" id="name">
                             <option selected value="0">Select pizza here</option>
                             <option value="Chicken Pizza">Chicken Pizza</option>
                             <option value="Margherita Pizza">Margherita Pizza</option>
                             <option value= "Hawaiian Pizza">Hawaiian Pizza</option>
                         </select>
-                        <label for="crust">Select a crust</label>
+                        <label for= "Crust">Select a crust</label>
                         <select class="browser-default custom-select custom-select-md mb-3" id="crust">
-                            <option selected value="0">Select crust here</option>
-                            <option value="stuffed">Stuffed -- 200 KES</option>
-                            <option value="crispy">Crispy -- 100 KES</option>
-                            <option value="Gluten-free">Gluten-free-- 200 KES</option>
+                            <option selected value = "0">Select crust here</option>
+                            <option value = "Stuffed">Stuffed -- 200 KES</option>
+                            <option value = "Crispy">Crispy -- 100 KES</option>
+                            <option value = "Gluten-free">Gluten-free-- 200 KES</option>
                         </select>
                       
                       
